don't read in plasmarc EVERY time a tooltip is shown, and be careful to stop the show timer always

there are still some issues with QGraphicsView not sending hover events in all cases, but this is
as good as it gets if we ignore those bugs in Qt.

BUG:247162